# SIMD

./: .gitignore  CMakeLists.txt  README.md
src/: base_types.hpp  conversion.hpp  float32x4.hpp  float32x8.hpp  float64x2.hpp  float64x4.hpp  int32x4.hpp  int32x8.hpp  int64x2.hpp  int64x4.hpp  main.cpp  simd.hpp  util.hpp  vector.hpp  versions.hpp
test/: main.cpp
